--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
+  shared_preferences: ^2.5.3
+  data_table_2: ^2.6.0
+  drift_flutter: ^0.2.5
+  drift: ^2.28.1
+  string_capitalize: ^0.0.10
+  go_router: ^16.1.0
+  open_file: ^3.5.10
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/img/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -73,12 +83,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    # - family: Gilroy
+    #   fonts:
+    #   - asset: assets/fonts/Gilroy-Medium.ttf
+    #   - asset: assets/fonts/Gilroy-Bold.ttf
+    #     weight: 700
+    - family: Verdana
+      fonts:
+        - asset: assets/fonts/Verdana.ttf
+        - asset: assets/fonts/Verdana-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
