--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   go_router: ^16.1.0
   open_file: ^3.5.10
   equatable: ^2.0.7
+  flutter_numeric_keyboard: ^1.0.3+4
 
 dev_dependencies:
   flutter_test:
