--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   open_file: ^3.5.10
   equatable: ^2.0.7
   flutter_numeric_keyboard: ^1.0.3+4
+  network_info_plus: ^7.0.0
+  dartpy: ^0.0.5
 
 dev_dependencies:
   flutter_test:
