--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   open_file: ^3.5.10
   equatable: ^2.0.7
   rxdart: ^0.28.0
+  window_size: ^0.1.0
+  intl: ^0.20.2
   # flutter_numeric_keyboard: ^1.0.3+4
 
 
