--- a/pubspec2.yaml
+++ b/pubspec2.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.10.4
+  sdk: ^3.8.1
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,33 +33,19 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
-  go_router: ^17.0.1
-  shared_preferences: ^2.5.4
-  drift_flutter: ^0.2.8
-  data_table_2: ^2.7.2
+  shared_preferences: ^2.5.3
+  data_table_2: ^2.6.0
+  drift_flutter: ^0.2.5
+  drift: ^2.28.1
   string_capitalize: ^0.0.10
+  go_router: ^16.1.0
   open_file: ^3.5.10
-  window_size: ^0.1.0
-  rxdart: ^0.28.0
-  intl: ^0.20.2
   equatable: ^2.0.7
-  drift: ^2.30.0
-  # flutter_bloc: ^9.1.1
-  # shared_preferences: ^2.5.3
-  # data_table_2: ^2.6.0
-  # drift_flutter: ^0.2.5
-  # drift: ^2.28.1
-  # string_capitalize: ^0.0.10
-  # go_router: ^16.1.0
-  # open_file: ^3.5.10
-  # equatable: ^2.0.7
-  # rxdart: ^0.28.0
-  # window_size: ^0.1.0
-  # intl: ^0.20.2
-
+  rxdart: ^0.28.0
+  window_size: ^0.1.0
+  intl: ^0.20.2
   dart_helper_method:
     path: /home/diamond/Programming/PL/Dart/dart_helper_method
   my_widgets:
@@ -76,9 +62,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^6.0.0
-  # drift_dev: ^2.28.1
-  # build_runner: ^2.7.0
+  flutter_lints: ^5.0.0
+  drift_dev: ^2.28.1
+  build_runner: ^2.7.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
